# Codebase-Genius

./: .env  Code_Genius_MAS.jac  README.md  code_analyser.jac  doc_genie.jac  main.jac  main.py  pyproject.toml  repo_mapper.jac  requirements.txt
doc_genie/: README.md  USAGE_EXAMPLES.md  analyze.bat  analyze.sh  analyzer.py  launcher.py  package.json  pdf_generator.py  plantuml_to_jpg.py  requirements.txt
doc_genie/analyzers/: code_analyzer.jac  dependency_analyzer.jac  technology_detector.jac
doc_genie/config/: analysis_config.yaml
doc_genie/generators/: documentation_generator.jac
doc_genie/output/: README.md
doc_genie/output/analysis/: dependency_analysis.md  technology_analysis.md
doc_genie/output/api/: api_specification.md
doc_genie/output/architecture/: architecture_analysis.md
doc_genie/output/uml/: class_diagram.puml  component_diagram.puml  use_case_diagram.puml
doc_genie/src/: main.jac
doc_genie/tests/: test_analyzer.jac
doc_genie/walkers/: github_api_walker.jac
