[project]
name = "codebase-genius"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jac-cloud>=0.2.4",
    "jac-streamlit>=0.0.4",
    "jaclang>=0.8.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.4",
    "mtllm>=0.3.9",
    "python-dotenv>=1.1.1",
]
